--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 3.9.5
+# Messages Bundle for LimeWire 3.9.7
 # Default locale for: English - United States
 # Maintained by the LimeWire project team.
 ################################################################################
@@ -240,7 +240,7 @@ MENU_VIEW_SHOPPING=LimeShop
 MENU_VIEW_SHOPPING_MNEMONIC=P
 MENU_VIEW_SHOPPING_ACCESSIBLE=Show Shopping Window
 MENU_VIEW_THEMES_TITLE=Apply Skins
-MENU_VIEW_THEMES_TITLE_MNEMONIC=T
+MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_GET_MORE=Get more skins
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
@@ -834,12 +834,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Overwrite existing file
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire will not launch the specified file for security reasons.
 MESSAGE_CONFIRM_FILE_DELETE=Are you sure you want to delete the selected file(s)?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Unable to delete the file
-MESSAGE_UNABLE_TO_DELETE_FILE_END=It may be in use by another application.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. It may be in use by another application.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Unable to delete the directory
 MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Unable to rename the directory
 MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. It may be in use by another application.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Unable to rename the file
-MESSAGE_UNABLE_TO_RENAME_FILE_END=It may be in use by another application.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. It may be in use by another application.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire will not allow you to
 MESSAGE_INCOMPLETE_DIRECTORY_END=the folder reserved for incomplete files.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified directory for saving files. Please try a different directory.
@@ -894,7 +894,7 @@ ERROR_INTERNAL_SEND=Send
 ERROR_INTERNAL_REVIEW=Review
 ERROR_INTERNAL_DISCARD=Discard
 ERROR_INTERNAL_COPY=Copy Report
-ERROR_INTERNAL_OK=Ok
+ERROR_INTERNAL_OK=OK
 ERROR_INTERNAL_ALWAYS_SEND=Always Send Immediately
 ERROR_INTERNAL_ALWAYS_REVIEW=Always Ask For Review
 ERROR_INTERNAL_ALWAYS_DISCARD=Always Discard Bugs
