added what's new specific adult filter.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -354,6 +354,7 @@ AUTO_DL_CHECKBOX_STRING=Automatically Download
 AUTO_DL_CHECKBOX_TOOLTIP=LimeWire will download your files for you
 SEARCH_TYPE_KEYWORD=Keyword
 SEARCH_TYPE_WHATSNEW=What's New
+SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
 SEARCH_WHATSNEW_TITLE_ONE=Don't Know
 SEARCH_WHATSNEW_TITLE_TWO=What To Look For?
 SEARCH_WHATSNEW_DESC=A "What's New" search will search for files that have been recently added to the network.
