some new messages for connections.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -590,10 +590,15 @@ CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
 CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_END=connections up.
 CV_TABLE_STRING_CONNECTING=Connecting...
+CV_TABLE_STRING_CONNECTINGS=Connecting
 CV_TABLE_STRING_LEAF=Leaf
+CV_TABLE_STRING_LEAVES=Leaves
 CV_TABLE_STRING_ULTRAPEER=Ultrapeer
+CV_TABLE_STRING_ULTRAPEERS=Ultrapeers
 CV_TABLE_STRING_PEER=Peer
+CV_TABLE_STRING_PEERS=Peers
 CV_TABLE_STRING_STANDARD=0.6
+CV_TABLE_STRING_STANDARDS=Standard
 CV_TABLE_STRING_INCOMING=Incoming
 CV_TABLE_STRING_OUTGOING=Outgoing
 CV_TABLE_STRING_CONNECTED_ON=Connected on 
