--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 3.9.5
+# Messages Bundle for LimeWire 3.9.9
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -354,6 +354,7 @@ AUTO_DL_CHECKBOX_STRING=Chargement automatique
 AUTO_DL_CHECKBOX_TOOLTIP=LimeWire téléchargera vos fichiers automatiquement pour vous
 SEARCH_TYPE_KEYWORD=Mots-clés
 SEARCH_TYPE_WHATSNEW=Quoi de neuf\u00a0?
+SEARCH_WHATSNEW_HIDE_ADULT=Filtrer le contenu adulte
 SEARCH_WHATSNEW_TITLE_ONE=Vous ne savez pas
 SEARCH_WHATSNEW_TITLE_TWO=quoi rechercher\u00a0?
 SEARCH_WHATSNEW_DESC=Une recherche "Quoi de neuf\u00a0?" permettra de découvrir des fichiers ajoutés récemment au réseau.
@@ -589,10 +590,15 @@ CV_BUTTON_TOOLTIP_ADD=Crée une nouvelle connexion sortante
 CV_LABEL_KEEP_BEGIN=Garder environ
 CV_LABEL_KEEP_END=connexions actives.
 CV_TABLE_STRING_CONNECTING=Connexion...
+CV_TABLE_STRING_CONNECTINGS=Connexion
 CV_TABLE_STRING_LEAF=Terminal
+CV_TABLE_STRING_LEAVES=Terminaux
 CV_TABLE_STRING_ULTRAPEER=Ultrapair
+CV_TABLE_STRING_ULTRAPEERS=Ultrapairs
 CV_TABLE_STRING_PEER=Pair
+CV_TABLE_STRING_PEERS=Pairs
 CV_TABLE_STRING_STANDARD=0.6
+CV_TABLE_STRING_STANDARDS=Standard
 CV_TABLE_STRING_INCOMING=Entrant
 CV_TABLE_STRING_OUTGOING=Sortant
 CV_TABLE_STRING_CONNECTED_ON=Connecté depuis le 
