--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 3.9.7
+# Messages Bundle for LimeWire 3.9.9
 # Default locale for: Italian - Italy
 # Thanks to: Matteo. Additions/fixes by Toti Calò.
 ################################################################################
@@ -354,6 +354,7 @@ AUTO_DL_CHECKBOX_STRING=Scarica automaticamente
 AUTO_DL_CHECKBOX_TOOLTIP=LimeWire scaricherà i tuoi archivi per te.
 #??? SEARCH_TYPE_KEYWORD=Keyword
 #??? SEARCH_TYPE_WHATSNEW=What's new?
+#??? SEARCH_WHATSNEW_HIDE_ADULT=Hide adult content
 #??? SEARCH_WHATSNEW_TITLE_ONE=Don't know
 #??? SEARCH_WHATSNEW_TITLE_TWO=what to look for?
 #??? SEARCH_WHATSNEW_DESC=A "What's new?" search will search for files that have been recently added to the network.
@@ -589,13 +590,18 @@ CV_BUTTON_TOOLTIP_ADD=Crea una nuova connessione in uscita
 CV_LABEL_KEEP_BEGIN=Mantieni approssimativamente
 CV_LABEL_KEEP_END=connesioni attive.
 CV_TABLE_STRING_CONNECTING=Connessione...
+CV_TABLE_STRING_CONNECTINGS=Connessione
 CV_TABLE_STRING_LEAF=Foglio
+CV_TABLE_STRING_LEAVES=Foglii
 CV_TABLE_STRING_ULTRAPEER=Ultrapeer
+CV_TABLE_STRING_ULTRAPEERS=Ultrapeers
 CV_TABLE_STRING_PEER=Peer
+CV_TABLE_STRING_PEERS=Peers
 CV_TABLE_STRING_STANDARD=0.6
+#??? CV_TABLE_STRING_STANDARDS=Standard
 CV_TABLE_STRING_INCOMING=In arrivo
 CV_TABLE_STRING_OUTGOING=In uscita
-#??? CV_TABLE_STRING_CONNECTED_ON=Connected on 
+CV_TABLE_STRING_CONNECTED_ON=Connessione a
 CV_STRING_CLIENT=[Foglio]
 CV_STRING_ULTRAPEER=[Ultrapeer]
 CV_TABLE_STRING_KBPSEC=KB/s
