Change the ambiguous "Connexion" for the summary status in the connections pane

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -590,7 +590,7 @@ CV_BUTTON_TOOLTIP_ADD=Crée une nouvelle connexion sortante
 CV_LABEL_KEEP_BEGIN=Garder environ
 CV_LABEL_KEEP_END=connexions actives.
 CV_TABLE_STRING_CONNECTING=Connexion...
-CV_TABLE_STRING_CONNECTINGS=Connexion
+CV_TABLE_STRING_CONNECTINGS=en cours de connexion
 CV_TABLE_STRING_LEAF=Terminal
 CV_TABLE_STRING_LEAVES=terminaux
 CV_TABLE_STRING_ULTRAPEER=Ultrapair
