added some bh messages.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -354,6 +354,10 @@ AUTO_DL_CHECKBOX_STRING=Automatically Download
 AUTO_DL_CHECKBOX_TOOLTIP=LimeWire will download your files for you
 SEARCH_TYPE_KEYWORD=Keyword
 SEARCH_TYPE_WHATSNEW=What's New
+SEARCH_TYPE_BROWSEHOST=Direct Connect
+SEARCH_BROWSEHOST_TITLE=Got Friends?
+SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
+SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
 SEARCH_WHATSNEW_TITLE_ONE=Don't Know
 SEARCH_WHATSNEW_TITLE_TWO=What To Look For?
