New strings for Browse Host on direct connects to specific IPs.

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -354,6 +354,10 @@ AUTO_DL_CHECKBOX_STRING=Chargement automatique
 AUTO_DL_CHECKBOX_TOOLTIP=LimeWire téléchargera vos fichiers automatiquement pour vous
 SEARCH_TYPE_KEYWORD=Mots-clés
 SEARCH_TYPE_WHATSNEW=Quoi de neuf\u00a0?
+SEARCH_TYPE_BROWSEHOST=Connexion directe
+SEARCH_BROWSEHOST_TITLE=Vos amis?
+SEARCH_BROWSEHOST_DESC=Entrez l'adresse IP d'un de vos amis avec qui vous voulez vous connecter, cliquez sur 'Connexion directe', et LimeWire tentera d'obtenir la liste des fichiers partagés par cet utilisateur.
+SEARCH_BROWSEHOST_BUTTON=Connexion directe
 SEARCH_WHATSNEW_HIDE_ADULT=Filtrer le contenu adulte
 SEARCH_WHATSNEW_TITLE_ONE=Vous ne savez pas
 SEARCH_WHATSNEW_TITLE_TWO=quoi rechercher\u00a0?
