Change text of option to display extended tooltips in tables

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -313,7 +313,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Génère un dialogue d'erreur pour tests.
 ################################################################################
 TABLES_USE_ROWSTRIPE=Bandes horizontales
 TABLES_REAL_TIME_SORTING=Tri automatique
-TABLES_DISPLAY_TOOLTIPS=Afficher les bulles d'aide
+TABLES_DISPLAY_TOOLTIPS=Bulles d'aide étendues
 
 ################################################################################
 # Keys/value pairs for SearchView stuff....
