--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -124,7 +124,7 @@ TOTD_CLOSE=Close
 # Key/value pairs for the Getting Started image
 ###################################################################
 GETTING_STARTED_TITLE=Getting Started
-GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow you search results by using the buttons above the text field.
+GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
 
 ###################################################################
 # Key/value pairs for the Going Pro image.
