changed shopping tab title so there's no confusion that it isn't limeshop.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -148,7 +148,7 @@ SEARCH_TITLE=Search
 MONITOR_TITLE=Monitor
 CONNECTIONS_TITLE=Connections
 LIBRARY_TITLE=Library
-SHOPPING_TITLE=LimeShop
+SHOPPING_TITLE=Shopping
 OPTIONS_TITLE=Options
 STATS_TITLE=Statistics
 DOWNLOAD_TITLE=Downloads
