fixed the rest of the items to say 'Shopping'.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -218,9 +218,9 @@ MENU_NAV_CONN_ACCESSIBLE=Display the Connections Screen
 MENU_NAV_LIB=Library
 MENU_NAV_LIB_MNEMONIC=L
 MENU_NAV_LIB_ACCESSIBLE=Display the Library Screen
-MENU_NAV_SHOPPING=LimeShop
+MENU_NAV_SHOPPING=Shopping
 MENU_NAV_SHOPPING_MNEMONIC=P
-MENU_NAV_SHOPPING_ACCESSIBLE=Display the LimeShop Website
+MENU_NAV_SHOPPING_ACCESSIBLE=Display the Shopping Website
 
 MENU_VIEW_TITLE=View
 MENU_VIEW_TITLE_MNEMONIC=V
@@ -236,7 +236,7 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Show Connections Window
 MENU_VIEW_LIBRARY=Library
 MENU_VIEW_LIBRARY_MNEMONIC=L
 MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
-MENU_VIEW_SHOPPING=LimeShop
+MENU_VIEW_SHOPPING=Shopping
 MENU_VIEW_SHOPPING_MNEMONIC=P
 MENU_VIEW_SHOPPING_ACCESSIBLE=Show Shopping Window
 MENU_VIEW_THEMES_TITLE=Apply Skins
@@ -268,9 +268,9 @@ MENU_RESOURCES_TITLE_MNEMONIC=R
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=P
 MENU_RESOURCES_PRO_ACCESSIBLE=Display the LimeWire PRO Website
-MENU_RESOURCES_LIMESHOP=LimeShop
+MENU_RESOURCES_LIMESHOP=Shopping
 MENU_RESOURCES_LIMESHOP_MNEMONIC=L
-MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Display the LimeShop Website
+MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Display the Shopping Website
 
 MENU_TOOLS_TITLE=Tools
 MENU_TOOLS_TITLE_MNEMONIC=T
