--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -795,6 +795,20 @@ SPLASH_STATUS_STATISTICS_WINDOW=Loading statistics window...
 SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MESSAGE_SERVICE=Loading messages...
+SPLASH_STATUS_ICONS=Loading icons...
+SPLASH_STATUS_I18N=Loading internationalization support...
+SPLASH_STATUS_COMPONENT_LOADING_ACCEPTOR=Loading connection listener...
+SPLASH_STATUS_COMPONENT_LOADING_MESSAGE_ROUTER=Loading message router...
+SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_MANAGER=Loading connection management...
+SPLASH_STATUS_COMPONENT_LOADING_HOST_CATCHER=Locating peers...
+SPLASH_STATUS_COMPONENT_LOADING_FILE_MANAGER=Loading shared files...
+SPLASH_STATUS_COMPONENT_LOADING_DOWNLOAD_MANAGER_POST_GUI=Loading old downloads...
+SPLASH_STATUS_COMPONENT_LOADING_UPDATE_MANAGER=Checking for updates...
+SPLASH_STATUS_COMPONENT_LOADING_QUERY_UNICASTER=Loading directed querier...
+SPLASH_STATUS_COMPONENT_LOADING_HTTPACCEPTOR=Loading MAGNET listener...
+SPLASH_STATUS_COMPONENT_LOADING_PINGER=Loading peer listener...
+SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Loading stale connection management...
+SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading saved files...
 
 ##################################################################
 # Key/value pairs for the message displayed to prompt users to 
