--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 3.9.12
+# Messages Bundle for LimeWire 3.9.13
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -795,6 +795,20 @@ SPLASH_STATUS_STATISTICS_WINDOW=Chargement de l'écran de statistiques...
 SPLASH_STATUS_STATUS_WINDOW=Chargement de la barre d'état...
 SPLASH_STATUS_MENUS=Chargement des menus...
 SPLASH_STATUS_MESSAGE_SERVICE=Chargement des messages...
+SPLASH_STATUS_ICONS=Chargement des icônes...
+SPLASH_STATUS_I18N=Chargement du support international...
+SPLASH_STATUS_COMPONENT_LOADING_ACCEPTOR=Chargement de l'auditeur de connexions...
+SPLASH_STATUS_COMPONENT_LOADING_MESSAGE_ROUTER=Chargement du routeur de messages...
+SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_MANAGER=Chargement du gestionnaire de connexions...
+SPLASH_STATUS_COMPONENT_LOADING_HOST_CATCHER=Découverte d'autres pairs...
+SPLASH_STATUS_COMPONENT_LOADING_FILE_MANAGER=Chargement des fichiers partagés...
+SPLASH_STATUS_COMPONENT_LOADING_DOWNLOAD_MANAGER_POST_GUI=Chargement des anciens téléchargements...
+SPLASH_STATUS_COMPONENT_LOADING_UPDATE_MANAGER=Vérification des mises à jour...
+SPLASH_STATUS_COMPONENT_LOADING_QUERY_UNICASTER=Chargement du moteur de recherche dirigée...
+SPLASH_STATUS_COMPONENT_LOADING_HTTPACCEPTOR=Chargement de l'auditeur MAGNET...
+SPLASH_STATUS_COMPONENT_LOADING_PINGER=Chargement de l'auditeur d'agents pairs...
+SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Chargement du gestionnaire de connexions bloquées...
+SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Chargement de fichiers sauvegardés...
 
 ##################################################################
 # Key/value pairs for the message displayed to prompt users to 
