--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -927,6 +927,7 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server i
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+ERROR_NO_PORTS_AVAILABLE=LimeWire was unable to set up a port to listen for incoming connections.  Some features of LimeWire may not work as expected.
 ERROR_PORT_UNAVAILABLE=Port not available. Please select a different port.
 ERROR_KEEP_ALIVE=LimeWire does not allow you to maintain this many connections, as it creates excess traffic that clogs the network.
 ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeers with leaf nodes need at least six connections.
