add message for no port available

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -927,6 +927,7 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire était incapable de se connecter au serveu
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+ERROR_NO_PORTS_AVAILABLE=LimeWire n'a pas pu déterminer un port utilisable pour écouter les connexions. Certaines fonctions de LimeWire ne fonctionneront pas de la façon attendue.
 ERROR_PORT_UNAVAILABLE=Port non disponible. Veuillez sélectionner un port différent.
 ERROR_KEEP_ALIVE=LimeWire ne vous permet pas de maintenir autant de connexions actives, car cela crée un traffic excessif qui ralentit le réseau.
 ERROR_TOO_LOW_FOR_ULTRAPEER=Un Ultrapair connecté à des noeuds terminaux doit avoir au moins six connexions.
