--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.0.2
+# Messages Bundle for LimeWire 4.0.3
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -907,7 +907,9 @@ ERROR_DISK_FULL_GENERIC=LimeWire ne parvient pas à sauvegarder un fichier nécess
 ERROR_LOCKED_BY_PROCESS_DOWNLOAD=LimeWire ne peut télécharger le fichier sélectionné car un autre programme utilise ce fichier. Veuillez terminer ce programme et réessayer le chargement.
 ERROR_LOCKED_BY_PROCESS_GENERIC=Limewire ne parvient pas à ouvrir un fichier nécessaire car un autre programme a verrouillé le fichier. Limewire pourrait se comporter de façon inattendue tant que ce fichier n'est pas relaché.
 ERROR_ACCESS_DENIED_DOWNLOAD=Limewire n'a pas pu créer ou poursuivre l'écriture d'un fichier incomplet pour le téléchargement sélectionné car vous ne disposez pas des droits d'accès permettant d'écrire des fichiers dans le dossier des chargements incomplets. Pour continuer à utiliser LimeWire, veuiller choisir un dossier de sauvegarde différent.
-ERROR_ACCESS_DENIED_GENERIC=LimeWire n'a pas pu écrire un fichier nécessaire car car vous ne disposez pas des droits d'accès nécessaire à ce fichier. Vos préférences peuvent ne pas être conservées lors du prochain lancement de LimeWire.
+ERROR_ACCESS_DENIED_GENERIC=LimeWire n'a pas pu écrire un fichier nécessaire car car vous ne disposez pas des droits d'accès nécessaire à ce fichier. Vos préférences peuvent ne pas être conservées lors du prochain lancement de LimeWire, ou Limewire pourrait se comporter de façon inattendue.
+ERROR_INVALID_NAME_DOWNLOAD=LimeWire n'a pas pu ouvrir le fichier incomplet pour le chargement sélectionné car le nom de fichier contient des caractères non supportés par le système de fichiers de votre votre ordinateur.
+ERROR_INVALID_NAME_GENERIC=LimeWire ne pparvient pas à ouvrir un fichier nécessaire car le nom de ce fichier contient des caractères non supportés par le système de fichiers de votre ordinateur. LimeWire pourriat se comporter de façon inattendue.
 
 ################################################################################
 # Key/Value pairs for internal error messages
