If a props file is corrupted, we now dont show the user an error, we show the user a message saying some settings are lost and delete the corrupt props file so we restore defaults

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -982,6 +982,7 @@ ERROR_INVALID_URLS_IN_MAGNET=Au moins une des adresses URL incluses dans le lien
 ERROR_ITUNES_SCRIPT=Limewire n'est pas parvenu à charger le script d'intégration iTunes, et a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
 ERROR_ITUNES_LINK=LimeWire n'est pas parvenu à charger les composants nécessaires pour iTunes et a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
 ERROR_ITUNES_INTEGRATION=Une erreur s'est produite dans l'intégration iTunes pour LimeWire. Pour prévenir les erreurs ultérieures, LimeWire a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
+ERROR_PROPS_CORRUPTED=Un fichier utilisé pour sauvegarder vos préférences était endommagé. LimeWire utilisera des valeurs par défaut.
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
