changed Why go PRO? to Why

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -708,7 +708,7 @@ PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that
 
 PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 GO_PRO_TIP=Get LimeWire PRO Now
-WHYGOPRO=Why go PRO?
+WHYGOPRO=Why
 WHYGOPRO_TIP=What does PRO give me?
 GO_PRO_LATER=Later
 GO_PRO_LATER_TIP=Get LimeWire PRO Later
