added a help translate limewire message.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -253,6 +253,9 @@ MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Use your default skin
 MENU_VIEW_LANGS_TITLE=Change Language
 MENU_VIEW_LANGS_TITLE_MNEMONIC=H
 MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire must be restarted for the new language to take effect.
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help Translate LimeWire
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=T
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=Help translate LimeWire into your language
 MENU_VIEW_SEARCH_TITLE=Search
 MENU_VIEW_SEARCH_TITLE_MNEMONIC=S
 MENU_VIEW_SEARCH_ACCESSIBLE=Search Tab Options
