--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.0.3
+# Messages Bundle for LimeWire 4.0.4
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -253,6 +253,9 @@ MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Utilise votre thème par défaut.
 MENU_VIEW_LANGS_TITLE=Choix de langue
 MENU_VIEW_LANGS_TITLE_MNEMONIC=H
 MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire doit être redémarré pour afficher la nouvelle langue sélectionnée.
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Aidez à traduire LimeWire
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=T
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=Contribuez à la traduction de LimeWire dans votre langue
 MENU_VIEW_SEARCH_TITLE=Recherche
 MENU_VIEW_SEARCH_TITLE_MNEMONIC=R
 MENU_VIEW_SEARCH_ACCESSIBLE=Options des onglets de recherches.
@@ -708,7 +711,7 @@ PRO_LABEL_THANKS=Vous voulez mettre le TURBO pour vos chargements\u00a0? obtenez
 
 PRO_LABEL_QUESTION=Migrer vers LimeWire PRO\u00a0?
 GO_PRO_TIP=Acquérir LimeWire PRO maintenant.
-WHYGOPRO=Plus d'infos...
+WHYGOPRO=Pourquoi?
 WHYGOPRO_TIP=Que m'apporte la version PRO\u00a0?
 GO_PRO_LATER=Plus tard
 GO_PRO_LATER_TIP=Acquérir LimeWire PRO plus tard.
