--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.0.4
+# Messages Bundle for LimeWire 4.0.5
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -1110,6 +1110,15 @@ OPTIONS_DOWNLOAD_MAX_NUMBER_LABEL=Maximum de téléchargements\u00a0:
 OPTIONS_DOWNLOAD_CLEAR_TITLE=Purge des téléchargements
 OPTIONS_DOWNLOAD_CLEAR_LABEL=Vous pouvez choisir s'il faut purger automatiquement les téléchargements achevés, après transfert vers votre médiathèque.
 OPTIONS_DOWNLOAD_CLEAR_CHECK_BOX_LABEL=Masquer les téléchargements achevés\u00a0:
+
+################################################################################
+# Key/Value pairs for the options for setting the bandwidth devoted
+# to downloads in the options window
+################################################################################
+OPTIONS_DOWNLOAD_BANDWIDTH_TITLE=Bande passante des chargements
+OPTIONS_DOWNLOAD_BANDWIDTH_LABEL=Vous pouvez limiter la pert maximale de bande passante dédiée aux chargements de fichiers.
+OPTIONS_DOWNLOAD_BANDWIDTH_SLIDER_MAX_LABEL=Non limitée
+OPTIONS_DOWNLOAD_BANDWIDTH_SLIDER_LABEL_LABEL=Vitesse de chargement\u00a0:
 
 ################################################################################
 # Key/Value pairs for the options for automatically clearing uploads
