make the direct connect tab slightly more useful

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -360,6 +360,7 @@ SEARCH_TYPE_WHATSNEW=What's New
 SEARCH_TYPE_BROWSEHOST=Direct Connect
 SEARCH_BROWSEHOST_TITLE=Got Friends?
 SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
+SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
 SEARCH_WHATSNEW_TITLE_ONE=Don't Know
