creation time in ggep.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -391,6 +391,7 @@ RESULT_PANEL_CHAT=Chat
 RESULT_PANEL_LOCATION=Location
 RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=Vendor
+RESULT_PANEL_ADDED=Created
 
 #Filter labels.
 SEARCH_FILTER_ALL=All
