--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.0.5
+# Messages Bundle for LimeWire 4.0.6
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -360,6 +360,7 @@ SEARCH_TYPE_WHATSNEW=Quoi de neuf\u00a0?
 SEARCH_TYPE_BROWSEHOST=Connexion directe
 SEARCH_BROWSEHOST_TITLE=Vos amis?
 SEARCH_BROWSEHOST_DESC=Entrez l'adresse IP d'un de vos amis avec qui vous voulez vous connecter, cliquez sur 'Connexion directe', et LimeWire tentera d'obtenir la liste des fichiers partagés par cet utilisateur.
+SEARCH_BROWSEHOST_MYIP=Si vos amis souhaitent se connecter à vous, ils peuvent entrer
 SEARCH_BROWSEHOST_BUTTON=Connexion directe
 SEARCH_WHATSNEW_HIDE_ADULT=Filtrer le contenu adulte
 SEARCH_WHATSNEW_TITLE_ONE=Vous ne savez pas
@@ -737,6 +738,37 @@ VIEW_CHOOSER_OK_BUTTON_LABEL=Confirmer
 VIEW_CHOOSER_CANCEL_BUTTON_LABEL=Annuler
 #IndentingPanel
 XML_SEARCH_MORE_OPTIONS_LABEL=Options supplémentaires
+
+META_EDITOR_INFO_TAB_LABEL=Infos
+META_EDITOR_OK_BUTTON_LABEL=OK
+META_EDITOR_CANCEL_BUTTON_LABEL=Annuler
+META_EDITOR_ADVANCED_BUTTON_LABEL=Avancé
+META_EDITOR_RESET_LABEL=Réinitialiser
+
+META_EDITOR_AUDIO_LABEL=Audio
+META_EDITOR_TITLE_LABEL=Titre\u00a0:
+META_EDITOR_ARTIST_LABEL=Artiste\u00a0:
+META_EDITOR_ALBUM_LABEL=Album\u00a0:
+META_EDITOR_GENRE_LABEL=Genre\u00a0:
+META_EDITOR_YEAR_LABEL=Année\u00a0:
+META_EDITOR_TYPE_LABEL=Type\u00a0:
+META_EDITOR_TRACK_LABEL=Piste\u00a0:
+META_EDITOR_LANGUAGE_LABEL=Langue\u00a0:
+META_EDITOR_SECONDS_LABEL=Durée\u00a0:
+META_EDITOR_BITRATE_LABEL=Débit\u00a0:
+META_EDITOR_COMMENTS_LABEL=Commentaires\u00a0:
+META_EDITOR_SHA1_LABEL=SHA1:
+META_EDITOR_PRICE_LABEL=Prix\u00a0:
+META_EDITOR_LINK_LABEL=Lien\u00a0:
+META_EDITOR_ACTION_LABEL=Action\u00a0:
+META_EDITOR_STARS_LABEL=Étoiles\u00a0:
+
+META_EDITOR_SIZE_LABEL=Taille\u00a0:
+META_EDITOR_DATE_MODIFIED_LABEL=Modifié le\u00a0:
+META_EDITOR_KIND_LABEL=Format\u00a0:
+META_EDITOR_MP3_KIND_LABEL=MPEG-1 Audio Layer 3
+META_EDITOR_MP4_KIND_LABEL=MPEG-4 Audio
+META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
