load html engine at startup time.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -815,6 +815,7 @@ CHAT_YOU=You
 # Key/value pairs for splash screen status text
 ###################################################################
 SPLASH_STATUS_RESOURCE_MANAGER=Loading resources...
+SPLASH_STATUS_HTML_ENGINE=Loading HTML Engine...
 SPLASH_STATUS_SEARCH_WINDOW=Loading search window...
 SPLASH_STATUS_OPTIONS_WINDOW=Loading options window...
 SPLASH_STATUS_USER_SETTINGS=Loading user settings...
