SimppSettingsManager: added documentation, fixed bugs, implemented a todo and added another one.
LimeProps: added getSetting method to return the setting for a particular KEY

MessagesBundles: Added SimppLoading message

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -809,6 +809,7 @@ SPLASH_STATUS_COMPONENT_LOADING_HTTPACCEPTOR=Loading MAGNET listener...
 SPLASH_STATUS_COMPONENT_LOADING_PINGER=Loading peer listener...
 SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Loading stale connection management...
 SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading saved files...
+SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading simpp manager...
 
 ##################################################################
 # Key/value pairs for the message displayed to prompt users to 
