setup for granting access to file-view url

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -342,6 +342,8 @@ SEARCH_PUBLIC_STOP_STRING=Stop Search
 SEARCH_PUBLIC_BROWSE_STRING=Browse Host
 SEARCH_PUBLIC_CHAT_STRING=Chat With Host
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
+SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet details for file
+SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
 SEARCH_RESULT_TABLE_LABEL=Results
