--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -579,6 +579,14 @@ T1_SPEED=T1
 T3_SPEED=T3 or Higher
 MULTICAST_SPEED=Ethernet
 
+################################################################################
+# HTML Page stuff
+################################################################################
+HTML_PAGE_TITLE=Download Page
+# SPACE AT END NEEDS TO BE THERE!!!
+HTML_PAGE_LISTING=File Listing for 
+HTML_PAGE_MAGNET=Magnet Links for Fast Downloads (if you have LimeWire installed)
+
 ###################################################################
 # Key/value pairs for ConnectionView
 ###################################################################
