added another pane to track special queries, add as you like

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1572,6 +1572,9 @@ STATS_QUERY_REQUEST_HOPS_TITLE=Hops
 STATS_QUERY_REQUEST_HOPS_LABEL=All received queries, by hops.
 STATS_QUERY_REQUEST_TTL_TITLE=TTL
 STATS_QUERY_REQUEST_TTL_LABEL=All received queries, by time to live (TTL).
+# Advanced Gnutella Message special queries
+STATS_SPECIAL_QUERIES_TITLE=Special Queries
+STATS_SPECIAL_QUERIES_LABEL=All of the special marked queries.
 # Advanced Gnutella Message hops/ttl for query hits
 STATS_QUERY_REPLY_HOPS_TITLE=Hops
 STATS_QUERY_REPLY_HOPS_LABEL=All received query hits, by hops.
@@ -2090,6 +2093,9 @@ HOPS6=Hops 6
 HOPS7=Hops 7
 HOPS8=Hops 8
 HOPS9=Hops 9
+
+# Special Query labels
+WHAT_IS_NEW_QUERIES=What Is New?
 
 # TTL labels
 TTL0=TTL 0
