--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -840,6 +840,7 @@ SPLASH_STATUS_MONITOR_WINDOW=Loading monitor window...
 SPLASH_STATUS_CONNECTION_WINDOW=Loading connection window...
 SPLASH_STATUS_STATISTICS_WINDOW=Loading statistics window...
 SPLASH_STATUS_STATUS_WINDOW=Loading status window...
+SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
 SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MESSAGE_SERVICE=Loading messages...
 SPLASH_STATUS_ICONS=Loading icons...
