some more menu options.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -224,6 +224,12 @@ MENU_NAV_SHOPPING_ACCESSIBLE=Display the Shopping Website
 
 MENU_VIEW_TITLE=View
 MENU_VIEW_TITLE_MNEMONIC=V
+MENU_VIEW_SMALL_ICONS=Use Small Icons
+MENU_VIEW_SMALL_ICONS_MNEMONIC=S
+MENU_VIEW_SMALL_ICONS_ACCESSIBLE=Use Small Icons
+MENU_VIEW_TEXT_WITH_ICONS=Show Icon Text
+MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
+MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Show Text Below Icons
 MENU_VIEW_SHOW_HIDE_TITLE=Show/Hide
 MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
 MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Show or Hide individual tabs
