always show the Saved directory in the library, in addition to the Incomplete directory and shared folders.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -649,6 +649,8 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
+LIBRARY_TREE_INCOMPLETE_DIRECTORY=Incomplete Files
 
 ################################################################################
 # Key/value pairs for burn cd link
