re-arranged icons a bit.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -407,6 +407,8 @@ SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
 
+DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
+DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Download
 DOWNLOAD_KILL_BUTTON_LABEL=Kill Download
 DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
 DOWNLOAD_RESUME_BUTTON_LABEL=Resume
@@ -486,7 +488,7 @@ STATISTICS_CONNECTION_IDLE=Idle
 ################################################################################
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Kill Download
 DOWNLOAD_POPUP_MENU_RESUME=Force Resume
-DOWNLOAD_POPUP_MENU_LAUNCH=Launch File
+DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
 DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
 DOWNLOAD_NAME_COLUMN=Name
