add fw-fw stats, fix broken verify condition for push uploads.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2189,6 +2189,8 @@ DOWNLOAD_PUSH_FAILURE_INTERRUPTED=Failed Push (Interrupted)
 DOWNLOAD_PUSH_FAILURE_NO_RESPONSE=Failed Push (No GIV Received)
 DOWNLOAD_PUSH_FAILURE_LOST=Failed Push (Lost Connection)
 DOWNLOAD_TCP_CONNECT_TIME=TCP Connect Time
+DOWNLOAD_FW_FW_SUCCESS=Succesful FW-FW Connection
+DOWNLOAD_FW_FW_FAILURE=Failed FW-FW Connection
 
 # Advanced Upload statistics
 UPLOAD_STAT_THEX=THEX Request
@@ -2222,6 +2224,8 @@ UPLOAD_STAT_COMPLETED=Completed Responses
 UPLOAD_STAT_INTERRUPTED=Interrupted
 UPLOAD_STAT_STALLED=Stalled
 UPLOAD_STAT_COMPLETED_FILE=Completed File Transfers
+UPLOAD_FW_FW_SUCCESS=Succesful FW-FW Connection
+UPLOAD_FW_FW_FAILURE=Failed FW-FW Connection
 
 # Advanced Handshaking statistics
 LEAF_OUTGOING_REJECT_LEAF=Out Rej. (Leaf)
