--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -990,6 +990,7 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server i
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes).  This feature will be turned off.  You can turn it back on in options, under iTunes -> DAAP.
 ERROR_NO_PORTS_AVAILABLE=LimeWire was unable to set up a port to listen for incoming connections. Some features of LimeWire may not work as expected.
 ERROR_PORT_UNAVAILABLE=Port not available. Please select a different port.
 ERROR_KEEP_ALIVE=LimeWire does not allow you to maintain this many connections, as it creates excess traffic that clogs the network.
