--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.0.6
 # Default locale for: English - United States
-# Maintained by the LimeWire project team.
+## Maintained by the LimeWire project team.
 ################################################################################
 LOCALE_LANGUAGE_CODE=
 LOCALE_LANGUAGE_NAME=English
