--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -990,7 +990,8 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server i
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
-ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes).  This feature will be turned off.  You can turn it back on in options, under iTunes -> DAAP.
+ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes).  This feature will be turned off.  You can turn it back on in options, under iTunes -> Sharing.
+ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes).  This feature will be turned off.  You can turn it back on in options, under iTunes -> Sharing.
 ERROR_NO_PORTS_AVAILABLE=LimeWire was unable to set up a port to listen for incoming connections. Some features of LimeWire may not work as expected.
 ERROR_PORT_UNAVAILABLE=Port not available. Please select a different port.
 ERROR_KEEP_ALIVE=LimeWire does not allow you to maintain this many connections, as it creates excess traffic that clogs the network.
@@ -1067,7 +1068,8 @@ OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_PLAYER_MAIN_TITLE=Player
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
-OPTIONS_ITUNES_DAAP_MAIN_TITLE=DAAP
+OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importing
+OPTIONS_ITUNES_DAAP_MAIN_TITLE=Sharing
 OPTIONS_APPS_MAIN_TITLE=Helper Apps
 OPTIONS_BUGS_MAIN_TITLE=Bug Reports
 OPTIONS_GUI_MAIN_TITLE=View
@@ -1262,19 +1264,18 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=You can use the internal player or your system d
 ################################################################################
 # Key/Value pairs for the iTunes options in the options window
 ################################################################################
-OPTIONS_ITUNES_SUPPORT_ACTIVE_CHECK_BOX_LABEL=Enable iTunes support:
-OPTIONS_ITUNES_PREFERENCE_TITLE=iTunes options
-OPTIONS_ITUNES_PREFERENCE_LABEL=You can enable iTunes support (Mac OS X only).
+OPTIONS_ITUNES_SUPPORT_ACTIVE_CHECK_BOX_LABEL=Enable iTunes importing:
+OPTIONS_ITUNES_PREFERENCE_TITLE=Importing
+OPTIONS_ITUNES_PREFERENCE_LABEL=You can have LimeWire import newly downloaded songs into iTunes.
 
 ################################################################################
 # Key/Value pairs for the iTunes/DAAP options in the options window
 ################################################################################
-OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Digital Audio Access Protocol
-OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other DAAP enabled Players. 
+OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
+OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing.  This mode uses more resources and is slower, but may fix problems.
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
-OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=BIO
-OPTIONS_ITUNES_DAAP_SUPPORT_USE_NIO_LABEL=NIO
+OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
 
 OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
